--- a/webtoapk-electron/package.json
+++ b/webtoapk-electron/package.json
@@ -7,14 +7,22 @@
     "start": "electron .",
     "dev": "electron . --dev",
     "build": "electron-builder",
-    "pack": "electron-builder --dir"
+    "pack": "electron-builder --dir",
+    "package": "electron-packager . webtoapk-studio --platform=win32 --arch=x64 --out=build --overwrite"
   },
-  "keywords": ["electron", "web", "apk", "android", "converter"],
+  "keywords": [
+    "electron",
+    "web",
+    "apk",
+    "android",
+    "converter"
+  ],
   "author": "WEBtoAPK Studio",
   "license": "MIT",
   "devDependencies": {
     "electron": "^28.0.0",
-    "electron-builder": "^24.0.0"
+    "electron-builder": "^24.0.0",
+    "electron-packager": "^17.1.2"
   },
   "dependencies": {
     "archiver": "^6.0.0",
