--- a/webtoapk-electron/.gitignore
+++ b/webtoapk-electron/.gitignore
@@ -1,6 +1,24 @@
 node_modules/
 dist/
 build/
+release/
 *.log
 .DS_Store
+Thumbs.db
+
+# Electron build artifacts
+*.exe
+*.dmg
+*.AppImage
+*.deb
+*.rpm
+*.snap
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
