--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ webtoapk-electron/node_modules/
 webtoapk-electron/dist/
 webtoapk-electron/build/
 webtoapk-electron/release/
+webtoapk-electron/output/
 webtoapk-electron/*.exe
 webtoapk-electron/*.dmg
 webtoapk-electron/*.AppImage
