--- a/webtoapk-electron/package.json
+++ b/webtoapk-electron/package.json
@@ -8,7 +8,7 @@
     "dev": "electron . --dev",
     "build": "electron-builder",
     "pack": "electron-builder --dir",
-    "package": "electron-packager . webtoapk-studio --platform=win32 --arch=x64 --out=release --overwrite"
+    "package": "electron-packager . webtoapk-studio --platform=win32 --arch=x64 --out=output --overwrite"
   },
   "keywords": [
     "electron",
