--- a/webtoapk-electron/package.json
+++ b/webtoapk-electron/package.json
@@ -36,7 +36,14 @@
     },
     "files": [
       "src/**/*",
-      "assets/**/*"
+      "assets/**/*",
+      "!src/**/*.ts"
+    ],
+    "extraFiles": [
+      {
+        "from": "src/preload.js",
+        "to": "preload.js"
+      }
     ]
   }
 }
