--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 webtoapk-electron/node_modules/
 webtoapk-electron/dist/
 webtoapk-electron/build/
+webtoapk-electron/build_*/
 webtoapk-electron/release/
 webtoapk-electron/output/
-webtoapk-electron/build_27864/
 webtoapk-electron/*.exe
 webtoapk-electron/*.dmg
 webtoapk-electron/*.AppImage
